plugins {
    id 'java'
    id 'net.minecraftforge.gradle' version "${gradle_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: minecraft_version
    runs {
        register('server') {
            args '--nogui', '--port', 25565 + 1182
            workingDir = file('runs/main/server/')
            jvmArgs '--add-opens', 'cpw.mods.bootstraplauncher/cpw.mods.bootstraplauncher=ALL-UNNAMED'
        }
    }
}

apply from: file('../shared.gradle')

dependencies {
    implementation minecraft.dependency("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
}